[bug]#4761 fix gap messages number

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -447,7 +447,7 @@ i.mail span{
   padding: 1px;
   position: relative;
   left: 20px;
-  top: 13px;
+  top: -30px;
 }
 i.conversation-large::before, i.type.messagerie::before, i.mail::before{
   content: "\e804";
@@ -762,8 +762,6 @@ nav.horizontal{
 }
 
 
-
-
 i.public{
   .fonticon;
   cursor: pointer;
@@ -778,24 +776,6 @@ i.prive{
 }
 i.prive::before{
  content:'\e860';
-}
-
-
-i.mail span{
-	background-color: @accent;
-	display: block;
-	color: #fff;
-	height: 15px;
-	width: 15px;
-	line-height: 15px;
-	font-size: 12px;
-	text-align: center;
-	border-radius: 7px;
-	padding: 1px;
-	position: relative;
-	left: 20px;
-	top: 13px;
-
 }
 
 i.send-mail{
