--- a/assets/themes/leo/dyslexic/theme.css
+++ b/assets/themes/leo/dyslexic/theme.css
@@ -6730,7 +6730,7 @@ i.mail span {
   padding: 1px;
   position: relative;
   left: 20px;
-  top: 13px;
+  top: -30px;
 }
 i.conversation-large::before,
 i.type.messagerie::before,
@@ -7231,21 +7231,6 @@ i.prive {
 }
 i.prive::before {
   content: '\e860';
-}
-i.mail span {
-  background-color: #ff8500;
-  display: block;
-  color: #fff;
-  height: 15px;
-  width: 15px;
-  line-height: 15px;
-  font-size: 12px;
-  text-align: center;
-  border-radius: 7px;
-  padding: 1px;
-  position: relative;
-  left: 20px;
-  top: 13px;
 }
 i.send-mail {
   font-family: "fontello";
